Added links between the three pages

--- a/contact.html
+++ b/contact.html
@@ -12,5 +12,7 @@
       Email us at iwantsome@croissants.com to order a batch made for just you or
       to share with your family, friends, co-workers, and/or neighbors.
     </p>
+    <a href="/">Homepage</a>
+    <a href="/photo.html">Photos</a>
   </body>
 </html>
