--- a/index.html
+++ b/index.html
@@ -34,5 +34,7 @@
       Croissants are a common part of a continental breakfast in many European
       countries.
     </p>
+    <a href="/photo.html">Photos</a>
+    <a href="/contact.html">Contact Us</a>
   </body>
 </html>
