--- a/photo.html
+++ b/photo.html
@@ -35,5 +35,7 @@
       src="/images/Smoked-Salmon-Egg-Salad.jpg"
       alt="Photo of a Smoked Salmon Egg Salad dish."
     />
+    <a href="/">Homepage</a>
+    <a href="/contact.html">Contact Us</a>
   </body>
 </html>
