--- a/photo.html
+++ b/photo.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Visuals Page</title>
+    <link rel="stylesheet" href="/src/styles.css" />
+    <title>Photos Page</title>
   </head>
   <body>
     <h1>🥐 Visualizing breakfast, lunch or dinner with croissants</h1>
