Made some CSS changes

--- a/contact.html
+++ b/contact.html
@@ -10,9 +10,13 @@
   <body>
     <h1>🥐 Contact Us</h1>
     <p>
-      Email us at iwantsome@croissants.com to order a batch made for just you or
-      to share with your family, friends, co-workers, and/or neighbors.
+      Email us at
+      <a href="mailto:iwantsome@croissants.com">iwantsome@croissants.com</a> to
+      order a batch made for just you to enjoy or to share with your family,
+      friends, co-workers, and/or neighbors.
     </p>
+
+    <br />
     <a href="/">Homepage</a>
     <a href="/photo.html">Photos</a>
   </body>
