Updated pages for better SEO

--- a/contact.html
+++ b/contact.html
@@ -4,20 +4,30 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Contact page with email address for Billings' Montana Croissants."
+    />
     <link rel="stylesheet" href="src/styles.css" />
-    <title>Contact Us</title>
+    <title>
+      Billings' Montana Croissants Contact Us Page - BillingsMTCroissants.com
+    </title>
   </head>
   <body>
     <h1>🥐 Contact Us</h1>
     <p>
       Email us at
-      <a href="mailto:iwantsome@croissants.com">iwantsome@croissants.com</a> to
-      order a batch made for just you to enjoy or to share with your family,
+      <a href="mailto:iwantsome@BillingsMTCroissants.com"
+        >iwantsome@BillingsMTCroissants.com</a
+      >
+      to order a batch made for just you to enjoy or to share with your family,
       friends, co-workers, and/or neighbors.
     </p>
 
     <br />
-    <a href="/">Homepage</a>
-    <a href="/photo.html">Photos</a>
+    <footer>
+      <a href="/">Back to Billings' Montana Croissants Homepage</a>
+      <a href="/photo.html">View Croissant Dish Ideas</a>
+    </footer>
   </body>
 </html>
