--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Brief history description of the croissant and introduction to Billings' MT Croissants company."
+    />
     <link rel="stylesheet" href="/src/styles.css" />
-    <title>Croissant Homepage</title>
+    <title>
+      Billings' Montana Croissants Homepage - BillingsMTCroissants.com
+    </title>
   </head>
   <body>
-    <h1>Croissant</h1>
+    <h1>Billings' Montana Croissants</h1>
+
     <p>
       A croissant is a buttery, flaky, French viennoiserie pastry inspired by
       the shape of the Austrian kipferl but using the French yeast-leavened
@@ -35,8 +42,19 @@
       Croissants are a common part of a continental breakfast in many European
       countries.
     </p>
+    <p>
+      Make it a staple in your home too with some locally made croissants from
+      the Billings' MT Croissants company. As the company name indicates, these
+      croissants are made in Billings, Montana. They are available for our
+      neighbors here in Billings and the surrounding cities/towns. (Spoiler
+      Alert!!! We do plan to make them available in all of Montana and parts of
+      Wyoming soon....) Click on the links below to view some dish ideas using
+      croissants as the main ingredient and how you can get in contact with us.
+    </p>
     <br />
-    <a href="/photo.html">Photos</a>
-    <a href="/contact.html">Contact Us</a>
+    <footer>
+      <a href="/photo.html">View Croissant Dish Ideas</a>
+      <a href="/contact.html">Contact Billings' Montana Croissants</a>
+    </footer>
   </body>
 </html>
