--- a/photo.html
+++ b/photo.html
@@ -4,40 +4,80 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Curated photo ideas of dishes using croissants, links to Taste of Home recipes."
+    />
     <link rel="stylesheet" href="/src/styles.css" />
-    <title>Photos Page</title>
+    <title>
+      Billings' Montana Croissants Photo Ideas Page - BillingsMTCroissants.com
+    </title>
   </head>
   <body>
-    <h1>🥐 Visualizing breakfast, lunch or dinner with croissants</h1>
+    <h1>🥐 Visualizing breakfast, lunch and/or dinner with croissants</h1>
+    <p>Thanks to <em>Taste of Home</em> for the following dish ideas.</p>
     <h2>Sweet</h2>
-
-    <img
-      src="/images/Croissant-Baked-French-Toast.jpg"
-      alt="Photo of a Croissant Baked French Toast dish."
-    />
-    <img
-      src="/images/Dark-Chocolate-Croissant-Bread-Pudding.jpg"
-      alt="Photo of a Dark Chocolate Croissant Bread Pudding dish."
-    />
-    <img
-      src="/images/Fruity-Croissant-Puff.jpg"
-      alt="Photo of a Fruity Croissant Puff dish."
-    />
+    <a
+      href="https://www.tasteofhome.com/recipes/croissant-baked-french-toast/"
+      target="_blank"
+      title="Click to view Croissant Baked French Toast recipe."
+    >
+      <img
+        src="/images/Croissant-Baked-French-Toast.jpg"
+        alt="Photo of a Croissant Baked French Toast dish."
+    /></a>
+    <a
+      href="https://www.tasteofhome.com/recipes/dark-chocolate-croissant-bread-pudding/"
+      target="_blank"
+      title="Click to view Dark Chocolate Croissant Bread Pudding recipe."
+    >
+      <img
+        src="/images/Dark-Chocolate-Croissant-Bread-Pudding.jpg"
+        alt="Photo of a Dark Chocolate Croissant Bread Pudding dish."
+      />
+    </a>
+    <a
+      href="https://www.tasteofhome.com/recipes/fruity-croissant-puff/"
+      target="_blank"
+      title="Click to view Fruity Croissant Puff recipe."
+    >
+      <img
+        src="/images/Fruity-Croissant-Puff.jpg"
+        alt="Photo of a Fruity Croissant Puff dish."
+      />
+    </a>
     <h2>Savory</h2>
-    <img
-      src="/images/Chicken-Croissant-Sandwiches.jpg"
-      alt="Photo of a Chicken Croissant Sandwich."
-    />
-    <img
-      src="/images/New-England-Bean-Bog-Cassoulet.jpg"
-      alt="Photo of a New England Bean and Bog Cassoulet dish."
-    />
-    <img
-      src="/images/Smoked-Salmon-Egg-Salad.jpg"
-      alt="Photo of a Smoked Salmon Egg Salad dish."
-    />
+    <a
+      href="https://www.tasteofhome.com/recipes/chicken-croissant-sandwiches/"
+      target="_blank"
+      title="Click to view Chicken Croissant Sandwich recipe."
+    >
+      <img
+        src="/images/Chicken-Croissant-Sandwiches.jpg"
+        alt="Photo of a Chicken Croissant Sandwich."
+    /></a>
+    <a
+      href="https://www.tasteofhome.com/recipes/new-england-bean-bog-cassoulet/"
+      target="_blank"
+      title="Click to view New England Bean and Bog Cassoulet recipe."
+    >
+      <img
+        src="/images/New-England-Bean-Bog-Cassoulet.jpg"
+        alt="Photo of a New England Bean and Bog Cassoulet dish with Croissants."
+    /></a>
+    <a
+      href="https://www.tasteofhome.com/recipes/smoked-salmon-egg-salad/"
+      target="_blank"
+      title="Click to view Smoked Salmon Egg Salad Croissant Sandwich recipe."
+    >
+      <img
+        src="/images/Smoked-Salmon-Egg-Salad.jpg"
+        alt="Photo of a Smoked Salmon Egg Salad Croissant Sandwich dish."
+    /></a>
     <br />
-    <a href="/">Homepage</a>
-    <a href="/contact.html">Contact Us</a>
+    <footer>
+      <a href="/">Back to Billings' Montana Croissants Homepage</a>
+      <a href="/contact.html">Contact Billings' Montana Croissants</a>
+    </footer>
   </body>
 </html>
