Updates some content and page titles

--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     />
     <link rel="stylesheet" href="src/styles.css" />
     <title>
-      Billings' Montana Croissants Contact Us Page - BillingsMTCroissants.com
+      Billings' Montana Croissants Contact Us Page - BillingsMTCroissants
     </title>
   </head>
   <body>
