--- a/index.html
+++ b/index.html
@@ -9,13 +9,11 @@
       content="Brief history description of the croissant and introduction to Billings' MT Croissants company."
     />
     <link rel="stylesheet" href="/src/styles.css" />
-    <title>
-      Billings' Montana Croissants Homepage - BillingsMTCroissants.com
-    </title>
+    <title>Billings' Montana Croissants Homepage - BillingsMTCroissants</title>
   </head>
   <body>
     <h1>Billings' Montana Croissants</h1>
-
+    <h2>Brief history of the Croissant</h2>
     <p>
       A croissant is a buttery, flaky, French viennoiserie pastry inspired by
       the shape of the Austrian kipferl but using the French yeast-leavened
@@ -42,6 +40,7 @@
       Croissants are a common part of a continental breakfast in many European
       countries.
     </p>
+    <h2>Introduction to Billings' Montana Croissants</h2>
     <p>
       Make it a staple in your home too with some locally made croissants from
       the Billings' MT Croissants company. As the company name indicates, these
