--- a/photo.html
+++ b/photo.html
@@ -10,11 +10,16 @@
     />
     <link rel="stylesheet" href="/src/styles.css" />
     <title>
-      Billings' Montana Croissants Photo Ideas Page - BillingsMTCroissants.com
+      Billings' Montana Croissants Photo Ideas Page - BillingsMTCroissants
     </title>
   </head>
   <body>
-    <h1>🥐 Visualizing breakfast, lunch and/or dinner with croissants</h1>
+    <h1>🥐 Visualizing breakfast, lunch and/or dinner using croissants</h1>
+    <p>
+      The following photos are some ideas we have curated to help you add
+      croissants as a staple food in your life and we have added links to the
+      recipes. Click on the photo(s) that interest(s) you.
+    </p>
     <p>Thanks to <em>Taste of Home</em> for the following dish ideas.</p>
     <h2>Sweet</h2>
     <a
