Updated internal link titles

--- a/contact.html
+++ b/contact.html
@@ -26,8 +26,10 @@
 
     <br />
     <footer>
-      <a href="/">Back to Billings' Montana Croissants Homepage</a>
-      <a href="/photo.html">View Croissant Dish Ideas</a>
+      <a href="/" title="Back to Billings' Montana Croissants Homepage"
+        >Back to Homepage</a
+      >
+      <a href="/photo.html" title="View Croissant Dish Ideas">Photo Ideas</a>
     </footer>
   </body>
 </html>
