--- a/photo.html
+++ b/photo.html
@@ -81,8 +81,12 @@
     /></a>
     <br />
     <footer>
-      <a href="/">Back to Billings' Montana Croissants Homepage</a>
-      <a href="/contact.html">Contact Billings' Montana Croissants</a>
+      <a href="/" title="Back to Billings' Montana Croissants Homepage"
+        >Back to Homepage</a
+      >
+      <a href="/contact.html" title="Contact Billings' Montana Croissants"
+        >Contact Us</a
+      >
     </footer>
   </body>
 </html>
