--- a/index.html
+++ b/index.html
@@ -52,8 +52,10 @@
     </p>
     <br />
     <footer>
-      <a href="/photo.html">View Croissant Dish Ideas</a>
-      <a href="/contact.html">Contact Billings' Montana Croissants</a>
+      <a href="/photo.html" title="View Croissant Dish Ideas">Photo Ideas</a>
+      <a href="/contact.html" title="Contact Billings' Montana Croissants"
+        >Contact Us</a
+      >
     </footer>
   </body>
 </html>
